Fixed issue with overflow on cards

--- a/frontend/src/Styles/card.css
+++ b/frontend/src/Styles/card.css
@@ -9,6 +9,7 @@
     display: inline-block;
     height: 400px;
     vertical-align: middle;
+    overflow: auto;
 }
 
 .compare{
